--- a/3E/3E1/3E1.md
+++ b/3E/3E1/3E1.md
@@ -31,6 +31,7 @@ Pro účely této úlohy, kde teplota vodiče hraje u žárovky klíčovou roli 
 **Jaký je odpor vypnuté žárovky?** Vzhledem k neúplnosti zadání nelze poskytnout úplnou odpověď. Pokud bychom chtěli zjistit odpor vlákna za studena (při 20 °C), potřebovali bychom znát ze zadání alespoň výkon a teplotu vlákna při daném proudu.
 
 ### Schéma zapojení
+![alt text](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-schema.jpg "Schéma zapojení")
 
 ### Použité měřící přístroje a pomůcky
 Nebyly užity žádné měřící přístroje ani zařízení.
@@ -63,6 +64,7 @@ R=1,000 / (116,000 ∙ 10^(-3) )
 R= 8,621 Ω
 
 ### Graf
+![alt text](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-graf.jpg "Graf")
 
 ### Spolupracovali
 Úloha byla vypracována samostatně.
