--- a/3E/3E1/3E1.md
+++ b/3E/3E1/3E1.md
@@ -64,7 +64,7 @@ R=1,000 / (116,000 ∙ 10^(-3) )
 R= 8,621 Ω
 
 ### Graf
-![alt text](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-graf.jpg "Graf")
+![alt text](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-graf.png "Graf")
 
 ### Spolupracovali
 Úloha byla vypracována samostatně.
