--- a/3E/3E1/3E1.md
+++ b/3E/3E1/3E1.md
@@ -28,7 +28,7 @@ Tomu je zpravidla kladen elektrický odpor daného prostředí, který je dán u
 Pro účely této úlohy, kde teplota vodiče hraje u žárovky klíčovou roli (při dostatečném zahřátí vodiče dochází k tomu, že září jak v infračervené oblasti, tak i ve viditelném spektru), proto k teorii přidáme ještě vliv teploty materiálu na jeho rezistivitu a to p = p_0 (1 + α∆t), kde p_0 se rovná počáteční rezistivitě (v tabulkách měřena zpravidla při 20 °C), α je teplotní součinitel elektrického odporu a ∆t rozdíl teplot ve [°C].
 
 ### Odpovědi na otázky
-**Jaký je odpor vypnuté žárovky?** Vzhledem k neúplnosti zadání nelze poskytnout úplnou odpověď. Pokud bychom chtěli zjistit odpor vlákna za studena (při 20 °C), potřebovali bychom znát ze zadání alespoň výkon a teplotu vlákna při daném proudu.
+**Jaký je odpor vypnuté žárovky?** Vzhledem k neúplnosti zadání nelze poskytnout úplnou odpověď. Odpor vlákna je možné zjistit za pomoci charakteristiky v místě v bodě U = 0 V, bohužel charakteristika byla vzhledem k nepřesnostem měření aproximována a tudíž hodnota odporu by byla velmi nepřesná. Pokud bychom chtěli zjistit odpor vlákna za studena (při 20 °C), potřebovali bychom znát ze zadání alespoň výkon a teplotu vlákna při daném proudu.
 
 ### Schéma zapojení
 ![alt text](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-schema.jpg "Schéma zapojení")
