--- a/3E/3E1/3E1.md
+++ b/3E/3E1/3E1.md
@@ -1,7 +1,7 @@
 ## 3E1 - Charakteristika žárovky
  - Vypracoval: Meinlschmidt Jakub
  - Třída: 3D/PRA2
- - Varianta: 3E1-K
+ - Varianta: E1-K
  - Datum: 18. 09. 2017
 
 ### Zadání
