PDF version added

--- a/3E/3E1/3E1.md
+++ b/3E/3E1/3E1.md
@@ -73,4 +73,4 @@ R = 8,621 Ω
 Byly splněny všechny úkoly ze zadání. Mezi získané poznatky patří stručný výklad základů elektrotechniky v kapitole teorie, kde jsem jednoduše shrnul základní vztahy mezi veličinami. Dále jsem si oživil vliv teploty a dalších veličin na odpor vodiče a dozvěděl se o průběhu voltampérové charakteristiky žárovky. Jelikož průběh proudu není vzhledem ke „skoku“ na začátku měření přímo lineární, rozhodl jsem se pro spojení jednotlivých hodnot využít polynomickou funkci, která je blíže skutečnému průběhu.
 
 ### Ke stažení
-[3E1.docx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1.docx) | [3E1-vypocty.xlsx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-vypocty.xlsx)
+[3E1.docx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1.docx) | [3E1.pdf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1.pdf) | [3E1-vypocty.xlsx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E1/3E1-vypocty.xlsx)
