--- a/3E/3E2/3E2.md
+++ b/3E/3E2/3E2.md
@@ -105,3 +105,6 @@ vzorec
 
 ### Závěr
 Byly splněny všechny úkoly ze zadání. Součet jednotlivých výkonů byl roven celkovému výkonu, kontrola tedy vyšla správně. Mezi získané poznatky patří zopakování sériového a paralelního zapojování rezistorů. Úlohy se snažím vypracovávat tak, aby mi v budoucnu mohly sloužit jako základ pro zpracovávání maturitních otázek.
+
+### Ke stažení
+[3E2.docx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E2/3E2.docx) | [3E2.pdf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E2/3E2.pdf) | [3E2-vypocty.xlsx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E2/3E2-vypocty.xlsx)
