--- a/3E/3E3/3E3.md
+++ b/3E/3E3/3E3.md
@@ -45,7 +45,7 @@ vzorec
 Od jednotlivých složek impedance lze odvodit i výkon. Pro **činný výkon** platí stejně jako u stejnosměrných obvodů vztah P=U∙I [W]; u střídavých obvodů se přidává **složka jalová** (závislá na fázovém posunu) Q=U∙I∙sin⁡φ [VA]. Jejich součtem vzniká **zdánlivý výkon** S=√(P^2+Q^2 ) [VAR].
 
 ### Schéma zapojení
-![Schéma zapojení](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3-schema.PNG "Schéma zapojení")
+![Schéma zapojení](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3-schema.png "Schéma zapojení")
 
 ### Použité měřící přístroje a pomůcky
 Nebyly užity žádné měřící přístroje ani zařízení.
@@ -89,7 +89,7 @@ vzorec
 
 Jelikož se ale jedná o napětí na cívce, tak i to je fázově posunuté oproti proudu. Pouze napětí na rezistoru je ve fázi s proudem.
 
-![Graf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3-graf.PNG "Graf")
+![Graf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3-graf.png "Graf")
 
 Po součtu v komplexní matematice získáme celkové napětí v obvodu, to lze spočítat následovně.
 
