--- a/3E/3E3/3E3.md
+++ b/3E/3E3/3E3.md
@@ -117,3 +117,6 @@ vzorec
 
 ### Závěr
 Všechny úkoly se zadání byly splněny. Tato úloha byla doposud ze všech nejvíce vyčerpávající, jelikož jsem se problematiku snažil podrobně pochopit a co nejstručněji a jednoduše shrnout. Nad míru učiva jsem se seznámil s podrobnějším principem cívky a kondenzátoru a proč tyto dvě součástky určitým způsobem kladou zdánlivý odpor. Naučil jsem se lépe pracovat s fázovým posunem a díky komplexním číslům si jej dobře představit. Komplexní čísla jsou pro mě sice náročnější na zápis, ale daleko lépe popíší danou veličinu. Oproti předchozím pracím jsem začal využívat exponenciální tvar čísla, díky kterému lze na vypočítávaných hodnotách vždy dosáhnout alespoň 3 platných číslic.
+
+### Ke stažení
+[3E3.docx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3.docx) | [3E3.pdf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3.pdf) | [3E3-vypocty.xlsx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3E/3E3/3E3-vypocty.xlsx)
