--- a/3E/3E3/3E3.md
+++ b/3E/3E3/3E3.md
@@ -30,7 +30,7 @@ Střídavý proud je v obecné rovině proud, který mění svůj směr. Bavíme
 
 **Výkon P [W]** je obecně definován jako práce vykonaná za jednotku času P=W/t. V případě elektrického výkonu se jedná o elektrickou práci, tj. práci kterou vykoná náboj o určité velikosti při přesunu mezi dvěma místy za určitý čas při určitém napěti. Ve stejnosměrném obvodu je výkon definován P=U∙I, jelikož se ve stejnosměrném obvodu vyskytuje pouze činná složka. V případě střídavého proudu se však proud i napětí s časem mění, a to zejména periodicky s harmonickým průběhem. Tím se od činného odporu dostáváme k celkové **impedanci Z ⃗[Ω]**, která je závislá na frekvenci a mimo elektrický odpor popisuje i odpor jalový.
 
-Kolem vodiče, kterým prochází elektrický proud, vzniká magnetické pole, jelikož se ale proud u střídavého proudu s časem mění, mění se i ono magnetické pole. Díky této změně se však v magnetickém poli indikuje dle *Faradayova zákona* elektrické napětí.
+Kolem vodiče, kterým prochází elektrický proud, vzniká magnetické pole, jelikož se ale proud u střídavého proudu s časem mění, mění se i ono magnetické pole. Díky této změně se však v magnetickém poli indukuje dle *Faradayova zákona* elektrické napětí.
 
 Dle **Lenzova zákona** toto indukované napětí má opačnou polaritu, a působí tak proti proudu, který jej vytváří. Ačkoliv je ohmický odpor ideální cívky nulový (cívka je vodič), klade díky tomuto jevu zdánlivý odpor proudu, který nazýváme **induktivní reaktance X_L  [Ω]** (jinými slovy – induktance). Platí zde X_L=L∙ω; kde L je indukčnost cívky [H] a ω úhlová rychlost ω=2πf. Indukční reaktance dále způsobuje v obvodu fázový posun. Proud je o π/2 (90°) zpožděn za napětím.
 
