--- a/3G/3G1/3G1.md
+++ b/3G/3G1/3G1.md
@@ -1,1 +1,17 @@
+## 3G1 - Voltampérová charakteristika diody
+ - Vypracoval: Meinlschmidt Jakub
+ - Spolupracoval: Kotek Lubomír
+ - Třída: 3D/PRA2
+ - Varianta: G1
+ - Datum: 29. 1. 2018
 
+### Hodnocení
+ - Datum odevzdání: 9. 4. 2018
+ - Odborný dozor: Ing. Michna Michal
+ - Slovní hodnocení: Výborné
+ - Výtky:
+     - Závěr - Zhodnotit, jak dlouho trvaly zákmity tlačítka a kolik jich je
+     - Odpovědi na otázky - Popis osciloskopu téměř výborný, doplnit blokovým schématem a typy osciloskopů s různou úrovní digitalizace
+     
+### Ke stažení
+[3G1.docx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3G/3G1/3G1.docx) | [3G1.pdf](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3F/3G1/3G1.pdf) | [3G1.xlsx](https://github.com/jmeinlschmidt/mereni-sps-cl/blob/master/3F/3G1/3G1.xlsx)
