--- a/3F/3F.md
+++ b/3F/3F.md
@@ -1,1 +1,30 @@
+## Skupina měření - 3F
+ - Vypracoval: Meinlschmidt Jakub
+ - Spolupracoval: Mokrejš Filip
+ - Odborný dozor: Ing. Michna Michal
+ - Třída: 3D/PRA2
+ 
+### Protokoly
+- 3F1 - Kontrola měřícího přístroje: ampérmetr, voltmetr
+- 3F2 - Práce s měřícími přístroji: odpor, kapacita, frekvence
+- 3F3 - Práce s měřícími přístroji: indukčnost
+- 3F4 - Napěťový zdroj: vnitřní odpor, zatěžovací char.
+- 3F5 - Práce s osciloskopem: usměrňovače
 
+### Hodnocení
+- 3F1 - Výborné
+- 3F2 - Výborné
+- 3F3 - Výborné
+- 3F4 - Výborné
+- 3F5 - Výborné
+
+*Průměr - 1.00*
+
+### Počet stran
+- 3F1 - 8
+- 3F2 - 9
+- 3F3 - 12
+- 3F4 - 13
+- 3F5 - 6
+
+*Celkem - 48 stran; Průměr - 9,6 strany na protokol*
